# paper-translator-gemini

./: .gitignore  README.md  TODO  pdf_processing_log.json  pyproject.toml
configs/: template.tex
src/gp_summarize/: __init__.py  __main__.py  create_md.py  prompts.py  section.py  summarize.py
src/gp_summarize/lang/: de.py  en.py  es.py  fr.py  ja.py  ko.py  selector.py  zh.py
src/gps/: __main__.py  gemini.py  md_to_pdf.py  summarize.py
