[project]
name = "gemini-paper-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.11.0",
    "google-generativeai>=0.8.5",
    "marker-pdf>=1.6.2",
    "pypandoc>=1.15",
    "python-dotenv>=1.1.0",
]

[project.scripts]
gps = "gps.__main__:main"
md-to-pdf = "gps.md_to_pdf:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gps"]

[tool.hatch.build.sources]
"src" = ""
